get images from s3

--- a/src/components/PhotoGrid.astro
+++ b/src/components/PhotoGrid.astro
@@ -1,12 +1,12 @@
 ---
 import PhotoWithModal from "./PhotoWithModal.astro";
-const images: any[] = Astro.props.images;
+const imagePaths: string[] = Astro.props.imagePaths;
 ---
 
 <div class="mx-24 grid grid-cols-3 gap-8 mb-48">
   {
-    images.map((image, index) => (
-      <PhotoWithModal id={index} imageSrc={image} alt={index} />
+    imagePaths.map((imageSrc, index) => (
+      <PhotoWithModal id={index} imageSrc={imageSrc} alt={imageSrc} />
     ))
   }
 </div>
