--- a/src/components/PhotoGrid.astro
+++ b/src/components/PhotoGrid.astro
@@ -3,7 +3,7 @@ import PhotoWithModal from "./PhotoWithModal.astro";
 const imagePaths: string[] = Astro.props.imagePaths;
 ---
 
-<div class="mx-24 grid grid-cols-3 gap-8 mb-48">
+<div class="md:mx-24 grid grid-cols-1 md:grid-cols-2 gap-8 mb-48">
   {
     imagePaths.map((imageSrc, index) => (
       <PhotoWithModal id={index} imageSrc={imageSrc} alt={imageSrc} />
