--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -163,7 +163,7 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 5);
     <p class="text-base mt-6">
       I thoroughly enjoy travel, and by consequence: photography. Following are
       a few of my favourite photos from recent trips. <a
-        class="badge badge-info"
+        class="badge badge-primary"
         href="/play/photography/2023">Check out more</a
       >
     </p>
