--- a/src/pages/play/photography/2023.astro
+++ b/src/pages/play/photography/2023.astro
@@ -5,10 +5,6 @@ import { travelImagePaths2023 } from "../../../data/travelImages";
 ---
 
 <Layout title="Photography 2023">
+  <a class="mb-24 badge badge-primary" href="mailto:mtanzim@gmail.com">Email me</a> for inquiries.
   <PhotoGrid imagePaths={travelImagePaths2023} />
 </Layout>
-<style>
-  dialog::backdrop {
-    backdrop-filter: brightness(0);
-  }
-</style>
