--- a/src/layouts/PhotographyLayout.astro
+++ b/src/layouts/PhotographyLayout.astro
@@ -14,6 +14,10 @@ const pages = [
     label: "2022",
   },
   {
+    href: "/play/photography/older",
+    label: "Older",
+  },
+  {
     href: "mailto:mtanzim@gmail.com?subject=Inquiries about your photos",
     label: "Contact",
   },
