--- a/src/pages/play/photography/older.astro
+++ b/src/pages/play/photography/older.astro
@@ -1,9 +1,9 @@
 ---
 import PhotographyLayout from "../../../layouts/PhotographyLayout.astro";
 import PhotoGrid from "../../../components/PhotoGrid.astro";
-import { travelImagePaths2023 } from "../../../data/travelImages";
+import UnderConstruction from "../../../components/UnderConstruction.astro";
 ---
 
-<PhotographyLayout year={"2023"}>
-  <PhotoGrid imagePaths={travelImagePaths2023} />
+<PhotographyLayout year="older">
+  <UnderConstruction />
 </PhotographyLayout>
