adding titles to photo files

--- a/src/pages/play/photography/2022.astro
+++ b/src/pages/play/photography/2022.astro
@@ -1,9 +1,9 @@
 ---
 import PhotographyLayout from "../../../layouts/PhotographyLayout.astro";
 import PhotoGrid from "../../../components/PhotoGrid.astro";
-import { travelImagePaths2022 } from "../../../data/travelImages";
+import { travelImages2022 } from "../../../data/travelImages";
 ---
 
 <PhotographyLayout year={"2022"}>
-  <PhotoGrid imagePaths={travelImagePaths2022} />
+  <PhotoGrid imagePaths={travelImages2022} />
 </PhotographyLayout>
