--- a/src/pages/play/photography/2023.astro
+++ b/src/pages/play/photography/2023.astro
@@ -1,9 +1,9 @@
 ---
 import PhotographyLayout from "../../../layouts/PhotographyLayout.astro";
 import PhotoGrid from "../../../components/PhotoGrid.astro";
-import { travelImagePaths2023 } from "../../../data/travelImages";
+import { travelImages2023 } from "../../../data/travelImages";
 ---
 
 <PhotographyLayout year={"2023"}>
-  <PhotoGrid imagePaths={travelImagePaths2023} />
+  <PhotoGrid imagePaths={travelImages2023} />
 </PhotographyLayout>
