--- a/src/pages/play/photography/older.astro
+++ b/src/pages/play/photography/older.astro
@@ -1,9 +1,8 @@
 ---
-import PhotographyLayout from "../../../layouts/PhotographyLayout.astro";
-import PhotoGrid from "../../../components/PhotoGrid.astro";
 import UnderConstruction from "../../../components/UnderConstruction.astro";
+import PhotographyLayout from "../../../layouts/PhotographyLayout.astro";
 ---
 
-<PhotographyLayout year="older">
+<PhotographyLayout year="">
   <UnderConstruction />
 </PhotographyLayout>
