--- a/src/components/PhotoGrid.astro
+++ b/src/components/PhotoGrid.astro
@@ -1,12 +1,16 @@
 ---
+import type { FullCarouselImage } from "./FullCarousel";
 import PhotoWithModal from "./PhotoWithModal.astro";
-const imagePaths: string[] = Astro.props.imagePaths;
+const imagePaths: FullCarouselImage[] = Astro.props.imagePaths;
 ---
 
 <div class="md:mx-24 grid grid-cols-1 md:grid-cols-2 gap-8 mb-48">
   {
-    imagePaths.map((imageSrc, index) => (
-      <PhotoWithModal id={index} imageSrc={imageSrc} alt={imageSrc} />
-    ))
+    imagePaths.map((image, index) => {
+      console.log(image);
+      return (
+        <PhotoWithModal id={index} imageSrc={image.url} alt={image.title} />
+      );
+    })
   }
 </div>
