--- a/src/layouts/PhotographyLayout.astro
+++ b/src/layouts/PhotographyLayout.astro
@@ -17,10 +17,6 @@ const pages = [
     href: "/play/photography/older",
     label: "Older",
   },
-  {
-    href: "mailto:mtanzim@gmail.com?subject=Inquiries about your photos",
-    label: "Contact",
-  },
 ];
 ---
 
@@ -34,6 +30,13 @@ const pages = [
           </li>
         ))
       }
+      <li>
+        <a
+          class="tooltip"
+          data-tip="Get in touch regarding originals and prints"
+          href="mailto:mtanzim@gmail.com?subject=Inquiries about your photos"
+          target="_blank">Contact</a>
+      </li>
     </ul>
   </div>
   <div class="divider"></div>
