--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -7,7 +7,11 @@ import Carousel from "../../components/Carousel";
 import FullCarousel, { FullCarouselImage } from "../../components/FullCarousel";
 import json from "../../data/spotify-artists.json";
 import type { SpotifyArtists } from "../../types/spotify-artists";
-import { travelImages2023, travelImages2022 } from "../../data/travelImages";
+import {
+  travelImages2023,
+  travelImages2022,
+  travelImagesOlder,
+} from "../../data/travelImages";
 
 // Copied, see https://stackoverflow.com/a/2450976/9641551
 // warning: mutates
@@ -118,10 +122,11 @@ const gameTitleSet = new Set<string>();
 gameScreens.forEach((g) => gameTitleSet.add(g.title));
 const gameTitles = Array.from(gameTitleSet).join(", ");
 
-const travelImages: FullCarouselImage[] =
-  travelImages2023.concat(travelImages2022);
+const travelImages: FullCarouselImage[] = travelImages2023
+  .concat(travelImages2022)
+  .concat(travelImagesOlder);
 
-const topTravelImages = shuffle(travelImages.slice()).slice(0, 5);
+const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
 ---
 
 <Layout title="Play">
