--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,13 +11,14 @@ import Layout from "../layouts/Layout.astro";
           I'm a curious and passionate software engineer from Toronto, Canada.
           Learn about my <a class="badge badge-primary" href={"/work"}>work</a> and
           <a class="badge badge-secondary" href={"/play"}>play</a>, or browse
-          through some of my <a class="badge badge-info" href={"/blog"}
-            >thoughts</a
+          through my <a class="badge badge-info" href={"/play/photography/2023"}
+            >photography</a
           >.
         </p>
         <p class="py-2">
-          Check out my new <a class="badge badge-info" href={"/chat"}>chatbot</a
-          > to ask an AI questions about this website.
+          You can also ask a <a class="badge badge-info" href={"/chat"}
+            >chatbot</a
+          > questions about this website.
         </p>
       </div>
       <div class="divider lg:divider-horizontal"></div>
