--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -56,10 +56,10 @@ const pages = [
   </div>
 </div>
 <!-- mobile nav bar -->
-<div class="lg:hidden">
+<div class="lg:hidden mb-4">
   <div class="collapse collapse-arrow">
     <input type="checkbox" />
-    <div class="collapse-title text-xl font-medium">
+    <div class="collapse-title">
       <button class="btn btn-ghost normal-case text-xl">
         <img src="/favicon-32x32.png" alt="logo" />
         <p class="mx-2">Tanzim Mokammel</p>
