--- a/src/layouts/PhotographyLayout.astro
+++ b/src/layouts/PhotographyLayout.astro
@@ -22,7 +22,7 @@ const pages = [
 
 <Layout title={`Photography ${year}`}>
   <div class="flex-none">
-    <ul class="menu menu-horizontal px-1">
+    <ul class="menu md:menu-horizontal px-1">
       {
         pages.map((p) => (
           <li>
@@ -32,7 +32,7 @@ const pages = [
       }
       <li>
         <a
-          class="tooltip"
+          class="md:tooltip"
           data-tip="Get in touch regarding originals and prints"
           href="mailto:mtanzim@gmail.com?subject=Inquiries about your photos"
           target="_blank">Contact</a>
