--- a/src/components/PhotoGrid.astro
+++ b/src/components/PhotoGrid.astro
@@ -4,7 +4,7 @@ import PhotoWithModal from "./PhotoWithModal.astro";
 const imagePaths: FullCarouselImage[] = Astro.props.imagePaths;
 ---
 
-<div class="md:mx-24 grid grid-cols-1 md:grid-cols-2 gap-8 mb-48">
+<div class="lg:mx-24 grid grid-cols-1 lg:grid-cols-2 gap-8 mb-48">
   {
     imagePaths.map((image, index) => {
       return (
