--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -8,8 +8,9 @@ import FullCarousel, { FullCarouselImage } from "../../components/FullCarousel";
 import json from "../../data/spotify-artists.json";
 import type { SpotifyArtists } from "../../types/spotify-artists";
 import {
-  travelImagePaths2023,
-  travelImagePaths2022,
+  travelImages2023,
+  travelImages2022,
+  travelImagesOlder,
 } from "../../data/travelImages";
 
 // Copied, see https://stackoverflow.com/a/2450976/9641551
@@ -121,13 +122,11 @@ const gameTitleSet = new Set<string>();
 gameScreens.forEach((g) => gameTitleSet.add(g.title));
 const gameTitles = Array.from(gameTitleSet).join(", ");
 
-const travelImages: FullCarouselImage[] = travelImagePaths2023
-  .concat(travelImagePaths2022)
-  .map((url) => ({
-    url,
-  }));
+const travelImages: FullCarouselImage[] = travelImages2023
+  .concat(travelImages2022)
+  .concat(travelImagesOlder);
 
-const topTravelImages = shuffle(travelImages.slice()).slice(0, 5);
+const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
 ---
 
 <Layout title="Play">
