--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import tanzimImg from "../assets/tanzim.jpg";
+import { Image } from "astro:assets";
 ---
 
 <Layout title="Home" hideHeader>
@@ -22,7 +24,7 @@ import Layout from "../layouts/Layout.astro";
         </p>
       </div>
       <div class="divider lg:divider-horizontal"></div>
-      <img src="/tanzim.jpg" class="max-w-xs rounded-lg shadow-2xl" />
+      <Image alt="Tanzim" src={tanzimImg} class="max-w-xs rounded-lg shadow-2xl" />
     </div>
   </div>
 </Layout>
