--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -13,7 +13,7 @@ import resourceCheckoutImg  from "../../assets/work/resource-checkout.png"
 import spotifyImg  from "../../assets/work/spotify-side.png"
 import muscleImg  from "../../assets/work/muscle.png"
 import clockImg  from "../../assets/work/wall-clock.png"
-import profeshImg  from "../../assets/work/story/berlin/3.jpg"
+import profeshImg  from "../../../public/story/berlin/3.jpg"
 import tanzimImg  from "../../assets/tanzim.jpg"
 import podacastImg  from "../../assets/work/podcast.png"
 import { Image } from "astro:assets";
