disable theme toggle for now

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -46,13 +46,13 @@ const pages = [
         ))
       }
     </ul>
-    <button
+    <!-- <button
       class="btn btn-accent btn-outline btn-xs mx-4"
       data-toggle-theme="dracula,light"
       data-act-class="ACTIVECLASS"
     >
       day n' night
-    </button>
+    </button> -->
   </div>
 </div>
 <!-- mobile nav bar -->
@@ -77,13 +77,13 @@ const pages = [
           }
         </ul>
       </div>
-      <button
+      <!-- <button
         class="btn btn-accent btn-outline btn-xs mx-4 my-4"
         data-toggle-theme="dracula,light"
         data-act-class="ACTIVECLASS"
       >
         day n' night
-      </button>
+      </button> -->
     </div>
   </div>
 </div>
