resize a couple images

--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -115,7 +115,7 @@ const berlinImages: CarouselImage[] = [
       home to Toronto, Canada. I am currently writing the next chapters here.
     </p>
     <img
-      class="object-contain my-6 shadow-xl rounded-2xl bg-base-300 p-4"
+      class="object-contain my-6 shadow-xl rounded-2xl bg-base-300 p-4 mx-auto"
       src="/story/toronto.jpg"
       alt="Toronto"
     />
