--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -5,17 +5,17 @@ import Carousel, { CarouselImage } from "../../components/Carousel";
 
 const asiaImages: CarouselImage[] = [
   {
-    url: "/work/story/hanoi/1.jpg",
+    url: "/story/hanoi/sm-1.jpg",
     title: "Freecodecamp meetup Hanoi",
     desc: "Google translate is great at translating documentation! I had worked on a blog project with these guys, and it helped me realize how little React and Javascript I knew at the time.",
   },
   {
-    url: "/work/story/hanoi/2.jpg",
+    url: "/story/hanoi/sm-2.jpg",
     title: `Remote "Work" from Pai`,
     desc: "I was probably building my very first full stack SPA: a recipe app. The Roost stand and the Dell XPS took me far.",
   },
   {
-    url: "/work/story/hanoi/3.jpg",
+    url: "/story/hanoi/sm-3.jpg",
     title: `Dinner with the Relotalent team and friends`,
     desc: "I really have to thank the Relotalent team for giving me a shot. All I had to do was keenly listen to the issues of Italian politics. Thankfully my Python and SQL skills from a past life came clutch.",
   },
@@ -23,17 +23,17 @@ const asiaImages: CarouselImage[] = [
 
 const berlinImages: CarouselImage[] = [
   {
-    url: "/work/story/berlin/3.jpg",
+    url: "/story/berlin/sm-3.jpg",
     title: "Portfolio shoot with Moonfare",
     desc: `I didn't make the "Meet the Team" page, but it'll be difficult to top this LinkedIn profile photo.`,
   },
   {
-    url: "/work/story/berlin/1.jpg",
+    url: "/story/berlin/sm-1.jpg",
     title: "Brandenburg Tor at night",
     desc: "The weird and fantastic city of Berlin.",
   },
   {
-    url: "/work/story/berlin/2.jpg",
+    url: "/story/berlin/sm-2.jpg",
     title: "My first office space in Mindspace, Berlin",
     desc: "Jared Leto is not wrong, the coworking life is much better than cubicles.",
   },
@@ -115,8 +115,8 @@ const berlinImages: CarouselImage[] = [
       home to Toronto, Canada. I am currently writing the next chapters here.
     </p>
     <img
-      class="object-contain my-6 shadow-xl rounded-2xl bg-base-300 p-4"
-      src="/work/story/toronto.jpg"
+      class="object-contain my-6 shadow-xl rounded-2xl bg-base-300 p-4 mx-auto"
+      src="/story/toronto.jpg"
       alt="Toronto"
     />
   </div>
