--- a/src/assets/styles/resume.css
+++ b/src/assets/styles/resume.css
@@ -1,29 +1,28 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-	font-size: 112%;
+  font-size: 100%;
 }
 
 body {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-		'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-	line-height: 1.6;
-	font-size: 0.6875em; /* 11 pt */
-	color: #111;
-	margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI",
+    "Ubuntu", "Droid Sans", sans-serif, "Meiryo";
+  line-height: 1.6;
+  font-size: 12px; /* 11 pt */
+  color: #111;
+  margin: 0;
 }
 
 body > :first-child {
-	padding-top: 0;
-	margin-top: 0;
-
+  padding-top: 0;
+  margin-top: 0;
 }
 
 body > :last-child {
-	margin-bottom: 0;
-	padding-bottom: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 h1,
@@ -32,50 +31,55 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
-	padding: 0.5em 0 0.25em;
+  margin: 0;
+  padding: 0.5em 0 0.25em;
 }
 
 h1 {
-	margin-bottom: 16px;
-	border-bottom: solid 0.5px #fe0074;
+  margin-bottom: 16px;
+  border-bottom: solid 0.5px #fe0074;
 }
 
 h5,
 h6 {
-	padding: 0;
+  padding: 0;
 }
 
 h5 {
-	font-size: 1em;
+  font-size: 1em;
 }
 
 h6 {
-	font-size: 0.875em;
-	text-transform: uppercase;
+  font-size: 0.875em;
+  text-transform: uppercase;
 }
 
 p {
-	margin: 0.25em 0 1em;
+  margin: 0.25em 0 1em;
 }
 
 blockquote {
-	margin: 0.5em 0 1em;
-	padding-left: 0.5em;
-	padding-right: 1em;
-	border-left: 4px solid gainsboro;
-	font-style: italic;
+  margin: 0.5em 0 1em;
+  padding-left: 0.5em;
+  padding-right: 1em;
+  border-left: 4px solid gainsboro;
+  font-style: italic;
 }
 
 ul,
 ol {
-	margin: 0;
-	margin-left: 1em;
-	padding: 0 1.5em 0.5em;
+  margin: 0;
+  margin-left: 1em;
+  padding: 0 1.5em 0.5em;
 }
 
 pre {
-	white-space: pre-wrap;
+  background-color: #f8f8f8;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  overflow-x: auto;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 h1 code,
@@ -87,52 +91,52 @@ h6 code,
 p code,
 li code,
 pre code {
-	background-color: #f8f8f8;
-	padding: 0.1em 0.375em;
-	border: 1px solid #f8f8f8;
-	border-radius: 0.25em;
-	font-family: monospace;
-	font-size: 1.2em;
+  background-color: #f8f8f8;
+  padding: 0.1em 0.375em;
+  border: 1px solid #f8f8f8;
+  border-radius: 0.25em;
+  font-family: "Ubuntu Mono", monospace;
+  font-size: 1em;
 }
 
 pre code {
-	display: block;
-	padding: 0.5em;
+  display: block;
+  padding: 0.5em;
 }
 
 .page-break {
-	page-break-after: always;
+  page-break-after: always;
 }
 
 img {
-	max-width: 100%;
-	margin: 1em 0;
+  max-width: 100%;
+  margin: 1em 0;
 }
 
 table {
-	border-spacing: 0;
-	border-collapse: collapse;
-	display: block;
-	margin: 0 0 1em;
-	width: 100%;
-	overflow: auto;
+  border-spacing: 0;
+  border-collapse: collapse;
+  display: block;
+  margin: 0 0 1em;
+  width: 100%;
+  overflow: auto;
 }
 
 table th,
 table td {
-	padding: 0.5em 1em;
-	border: 1px solid gainsboro;
+  padding: 0.5em 1em;
+  border: 1px solid gainsboro;
 }
 
 table th {
-	font-weight: 600;
+  font-weight: 600;
 }
 
 table tr {
-	background-color: white;
-	border-top: 1px solid gainsboro;
+  background-color: white;
+  border-top: 1px solid gainsboro;
 }
 
 table tr:nth-child(2n) {
-	background-color: whitesmoke;
+  background-color: whitesmoke;
 }
