--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -51,7 +51,7 @@ const pages = [
       data-toggle-theme="dracula,light"
       data-act-class="ACTIVECLASS"
     >
-      day n' night
+      Light/Dark
     </button>
   </div>
 </div>
@@ -82,7 +82,7 @@ const pages = [
         data-toggle-theme="dracula,light"
         data-act-class="ACTIVECLASS"
       >
-        day n' night
+        Light/
       </button>
     </div>
   </div>
