--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -82,7 +82,7 @@ const pages = [
         data-toggle-theme="dracula,light"
         data-act-class="ACTIVECLASS"
       >
-        Light/
+        Light/Dark
       </button>
     </div>
   </div>
