--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -13,6 +13,7 @@ import {
   travelImagesOlder,
 } from "../../data/travelImages";
 import type { FullCarouselImage } from "../../types/images";
+import { WordCloudReact } from "../../components/MusicGenres/WordCloudReact";
 
 // Copied, see https://stackoverflow.com/a/2450976/9641551
 // warning: mutates
@@ -156,7 +157,7 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
       a glimpse of my affinity towards musical genres from the last few years:
     </p>
     <div class="my-6">
-      <Genres data={json as SpotifyArtists} client:only />
+      <WordCloudReact json={json as SpotifyArtists} client:only="react" />
     </div>
     This is based on my data on Spotify and you can generate a similar one through
     my <a
